// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/NotificationsFlyout renders a notification with the \`children\` prop 1`] = `
.emotion-18 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-5 {
  fill: transparent;
}

.emotion-6 {
  fill: #ffffff;
}

.emotion-13 {
  width: 300px;
  overflow-y: auto;
  overflow-x: hidden;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0;
  overflow: hidden;
  background-color: transparent;
  opacity: 0;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  pointer-events: none;
}

.emotion-16 {
  background-color: #ffffff;
  border-radius: 4px;
  border: none;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-15 {
  position: relative;
}

.emotion-8 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 13px;
  padding: 0 3px;
  font-size: 11px;
  line-height: 13px;
  border: 1px solid #ffffff;
  color: #ffffff;
  background-color: #0696d7;
  border-radius: 4px;
  pointer-events: none;
  font-weight: 400;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  display: block;
}

.emotion-12 {
  position: relative;
  overflow: hidden;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.emotion-12:last-child {
  border-bottom: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  border-left: 3px solid #bec8d2;
  border-left-color: #0696d7;
}

.emotion-10 {
  margin: 12px;
}

.emotion-9 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-9 ul,
.emotion-9 ol {
  padding-left: 24px;
}

.emotion-9 ul li {
  list-style: none;
}

.emotion-9 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-9 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-9 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-9 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006EAF;
  outline: none;
}

.emotion-9 a:hover {
  color: #006EAF;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006EAF;
  text-decoration-color: #006EAF;
}

.emotion-9 a:focus {
  color: #006EAF;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-9 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-9 h1 + p,
.emotion-9 h2 + p,
.emotion-9 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-9 b,
.emotion-9 strong {
  font-weight: 700;
}

<div
  className="emotion-18"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        title="View notifications"
      >
        <svg
          className="emotion-0"
          height="24px"
          viewBox="4651 1106 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="emotion-2"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="emotion-17"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-7"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-5"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-6"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-16"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-15"
      >
        <header
          className="emotion-8"
          style={
            Object {
              "borderBottom": "1px solid rgba(60, 60, 60, 0.25)",
              "padding": "12px
        24px",
            }
          }
        >
          Notifications
        </header>
        <section
          className="emotion-13"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="emotion-12"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="emotion-11"
              >
                <div
                  className="emotion-10"
                >
                  <div
                    className="emotion-9"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="emotion-14"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders a notification with the \`notifications\` prop 1`] = `
.emotion-18 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-5 {
  fill: transparent;
}

.emotion-6 {
  fill: #ffffff;
}

.emotion-13 {
  width: 300px;
  overflow-y: auto;
  overflow-x: hidden;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0;
  overflow: hidden;
  background-color: transparent;
  opacity: 0;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  pointer-events: none;
}

.emotion-16 {
  background-color: #ffffff;
  border-radius: 4px;
  border: none;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-15 {
  position: relative;
}

.emotion-8 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 13px;
  padding: 0 3px;
  font-size: 11px;
  line-height: 13px;
  border: 1px solid #ffffff;
  color: #ffffff;
  background-color: #0696d7;
  border-radius: 4px;
  pointer-events: none;
  font-weight: 400;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  display: block;
}

.emotion-12 {
  position: relative;
  overflow: hidden;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.emotion-12:last-child {
  border-bottom: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  border-left: 3px solid #bec8d2;
  border-left-color: #0696d7;
}

.emotion-10 {
  margin: 12px;
}

.emotion-9 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-9 ul,
.emotion-9 ol {
  padding-left: 24px;
}

.emotion-9 ul li {
  list-style: none;
}

.emotion-9 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-9 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-9 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-9 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006EAF;
  outline: none;
}

.emotion-9 a:hover {
  color: #006EAF;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006EAF;
  text-decoration-color: #006EAF;
}

.emotion-9 a:focus {
  color: #006EAF;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-9 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-9 h1 + p,
.emotion-9 h2 + p,
.emotion-9 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-9 b,
.emotion-9 strong {
  font-weight: 700;
}

<div
  className="emotion-18"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        title="View notifications"
      >
        <svg
          className="emotion-0"
          height="24px"
          viewBox="4651 1106 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="emotion-2"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="emotion-17"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-7"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-5"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-6"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-16"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-15"
      >
        <header
          className="emotion-8"
          style={
            Object {
              "borderBottom": "1px solid rgba(60, 60, 60, 0.25)",
              "padding": "12px
        24px",
            }
          }
        >
          Notifications
        </header>
        <section
          className="emotion-13"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="emotion-12"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="emotion-11"
              >
                <div
                  className="emotion-10"
                >
                  <div
                    className="emotion-9"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="emotion-14"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders with all props 1`] = `
.emotion-22 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-5 {
  fill: transparent;
}

.emotion-6 {
  fill: #ffffff;
}

.emotion-17 {
  width: 300px;
  overflow-y: auto;
  overflow-x: hidden;
}

.emotion-20 {
  background-color: #ffffff;
  border-radius: 4px;
  border: none;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-19 {
  position: relative;
}

.emotion-8 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 13px;
  padding: 0 3px;
  font-size: 11px;
  line-height: 13px;
  border: 1px solid #ffffff;
  color: #ffffff;
  background-color: #0696d7;
  border-radius: 4px;
  pointer-events: none;
  font-weight: 400;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  display: block;
}

.emotion-12 {
  position: relative;
  overflow: hidden;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.emotion-12:last-child {
  border-bottom: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  border-left: 3px solid #bec8d2;
  border-left-color: #0696d7;
}

.emotion-10 {
  margin: 12px;
}

.emotion-9 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-9 ul,
.emotion-9 ol {
  padding-left: 24px;
}

.emotion-9 ul li {
  list-style: none;
}

.emotion-9 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-9 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-9 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-9 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006EAF;
  outline: none;
}

.emotion-9 a:hover {
  color: #006EAF;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006EAF;
  text-decoration-color: #006EAF;
}

.emotion-9 a:focus {
  color: #006EAF;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-9 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-9 h1 + p,
.emotion-9 h2 + p,
.emotion-9 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-9 b,
.emotion-9 strong {
  font-weight: 700;
}

.emotion-21 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 44px;
  overflow: hidden;
  background-color: transparent;
  opacity: 1;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  pointer-events: none;
}

<div
  className="emotion-22"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        title="World"
      >
        <svg
          className="emotion-0"
          height="24px"
          viewBox="4651 1106 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="emotion-2"
      >
        44
      </div>
    </div>
  </div>
  <div
    className="emotion-21"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-7"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-5"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-6"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-20"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-19"
      >
        <header
          className="emotion-8"
          style={
            Object {
              "borderBottom": "1px solid rgba(60, 60, 60, 0.25)",
              "padding": "12px
        24px",
            }
          }
        >
          Hello
        </header>
        <section
          className="emotion-17"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={[Function]}
            role="list"
          >
            <div
              className="emotion-12"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="emotion-11"
              >
                <div
                  className="emotion-10"
                >
                  <div
                    className="emotion-9"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-12"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="emotion-11"
              >
                <div
                  className="emotion-10"
                >
                  <div
                    className="emotion-9"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="emotion-18"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders without props 1`] = `
.emotion-17 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 13px;
  padding: 0 3px;
  font-size: 11px;
  line-height: 13px;
  border: 1px solid #ffffff;
  color: #ffffff;
  background-color: #0696d7;
  border-radius: 4px;
  pointer-events: none;
  font-weight: 400;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  display: none;
}

.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-5 {
  fill: transparent;
}

.emotion-6 {
  fill: #ffffff;
}

.emotion-12 {
  width: 300px;
  overflow-y: auto;
  overflow-x: hidden;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0;
  overflow: hidden;
  background-color: transparent;
  opacity: 0;
  -webkit-transition-property: height,opacity;
  transition-property: height,opacity;
  -webkit-transition-duration: 300ms;
  transition-duration: 300ms;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  pointer-events: none;
}

.emotion-15 {
  background-color: #ffffff;
  border-radius: 4px;
  border: none;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-14 {
  position: relative;
}

.emotion-8 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  margin-top: 20px;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        title="View notifications"
      >
        <svg
          className="emotion-0"
          height="24px"
          viewBox="4651 1106 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="emotion-2"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="emotion-16"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-7"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-5"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-6"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-15"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-14"
      >
        <header
          className="emotion-8"
          style={
            Object {
              "borderBottom": "1px solid rgba(60, 60, 60, 0.25)",
              "padding": "12px
        24px",
            }
          }
        >
          Notifications
        </header>
        <section
          className="emotion-12"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="emotion-11"
            >
              <test-file-stub
                className="emotion-9"
                role="presentation"
              />
              <p
                className="emotion-8"
                style={
                  Object {
                    "margin": "20px 0 37px",
                  }
                }
              >
                You currently have no notifications
              </p>
            </div>
          </div>
        </section>
        <footer
          className="emotion-13"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;
